syntax = "proto3";

package auth;

// The Service Definition
service AuthService {
  // The function other services can call
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

// The Input
message ValidateTokenRequest {
  string token = 1;
}

// The Output
message ValidateTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  string role = 3;
  string error_message = 4; // Optional: explain why it failed
}